--- a/style.css
+++ b/style.css
@@ -12,4 +12,41 @@ html,body {
     height: 100%;
     width : 100%;
     background-color: #111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#cursor{
+    height: 20px;
+    width: 20px;
+    background-color: white;
+    border-radius: 50%;
+    position: fixed;
+    font-size: 7px;
+    text-align: center;
+    font: bold;
+    z-index: 9;
+}
+
+#image{
+    height: 30vw;
+    width: 60vw;
+    background-color: red;
+}
+
+#image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+}
+
+#overlay{
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 10;
+    background-color: #ffffff8a;
 }
